--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,17 @@
-LineLength:
+Style/Documentation:
+  Enabled: false
+
+Metrics/ClassLength:
+  Max: 250
+
+Metrics/BlockLength:
+  Max: 50
+
+Metrics/LineLength:
   Max: 120
+
+Metrics/AbcSize:
+  Max: 30
 
 MethodLength:
   Max: 50
